fix scrollBar

--- a/components/main/Header/components/HeaderFilters/headerFilters.module.scss
+++ b/components/main/Header/components/HeaderFilters/headerFilters.module.scss
@@ -127,14 +127,3 @@
     width: 100%;
   }
 }
-
-@media (max-width: $tablet) {
-  .choosenTransport_container {
-    width: 630px;
-  }
-
-  .stepButtonSubmit {
-    width: 150px !important;
-    flex-grow: 0;
-  }
-}
